Parsing using byte-array instead of Agrona